<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobile.clari.org.clari.questionSet_one">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ok now lets narrow down your possible conditions.\n"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/que1a"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGrp1a"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <RadioButton
                android:id="@+id/radio1aYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:checked="false"
                android:text="Yes"
                android:textSize="14dp" />

            <RadioButton
                android:id="@+id/radio1aNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:checked="false"
                android:text="No"
                android:textSize="14dp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/que1c"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGrp1c"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <RadioButton
                android:id="@+id/radio1cYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:checked="false"
                android:text="Yes"
                android:textSize="14dp" />

            <RadioButton
                android:id="@+id/radio1cNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:checked="false"
                android:text="No"
                android:textSize="14dp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/que1d"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGrp1d"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <RadioButton
                android:id="@+id/radio1dYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:checked="false"
                android:text="Yes"
                android:textSize="14dp" />

            <RadioButton
                android:id="@+id/radio1dNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:checked="false"
                android:text="No"
                android:textSize="14dp" />
        </RadioGroup>
    </LinearLayout>

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/que1eButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#1E88E5"

        android:text="None of these apply to me!" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/nextset1"
        android:background="#1E88E5"

        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Next" />

</LinearLayout>
</ScrollView>
</LinearLayout>
