<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobile.clari.org.clari.questionSet_one">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ok now lets narrow down your possible conditions\n"
                android:textColor="@android:color/background_dark"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/que2a"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGrp2a"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <RadioButton
                        android:id="@+id/radio2aYes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="Yes"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/radio2aNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="No"
                        android:textSize="14dp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/que2b"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGrp2b"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <RadioButton
                        android:id="@+id/radio2bYes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="Yes"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/radio2bNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="No"
                        android:textSize="14dp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/que2c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/que2c"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGrp2c"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <RadioButton
                        android:id="@+id/radio2cYes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="Yes"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/radio2cNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="No"
                        android:textSize="14dp" />
                </RadioGroup>
            </LinearLayout>


            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/nextset2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="#1E88E5"

                android:text="Next" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
